[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Player Scripts/Player Grav.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player Scripts/Player.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 960.0

[node name="Player" type="KinematicBody2D" groups=["Players"]]
script = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -4, -3 )
build_mode = 1
polygon = PoolVector2Array( 10, 0, 5, 9, -5, 9, -10, 0, -5, -9, 5, -9 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.768627, 0.0862745, 0.0862745, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Network_tick_rate" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[node name="GravityArea" type="Area2D" parent="." groups=["Players"]]
space_override = 1
gravity_point = true
gravity_vec = Vector2( 0, 0 )
gravity = 500.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravityArea"]
shape = SubResource( 1 )

[connection signal="MORE_SIDES" from="." to="." method="_on_difficulty_change"]
[connection signal="timeout" from="Network_tick_rate" to="." method="_on_network_tick_rate_timeout"]
